sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:8: error: ')' expected but ',' found.
			if (getValeur(j+1),getValeur(j)){
                                          ^AlgBubbleSort2:8: error: illegal start of simple expression
			if (getValeur(j+1),getValeur(j)){
                                                       ^